@@ -8,6 +8,7 @@ import cn.lypi.contracts.tui.DiffView;
 import cn.lypi.contracts.tui.GitDiffFileView;
 import cn.lypi.contracts.tui.GitDiffStatus;
 import cn.lypi.contracts.tui.StatusBarState;
+import cn.lypi.contracts.tui.TuiBlock;
 import cn.lypi.contracts.security.PermissionOption;
 import cn.lypi.contracts.security.PermissionOptionKind;
 import cn.lypi.contracts.security.PermissionBehavior;
@@ -33,9 +34,157 @@ class TuiRendererTest {
     private static final String ANSI_RESET = "\033[0m";
 
     @Test
+    void rendersCommittedBlocksAsStandaloneHistoryLines() {
+        TuiRenderer renderer = new TuiRenderer();
+
+        List<String> history = renderer.renderCommittedBlocks(
+            List.of(new TuiMessageBlock("a1", "m1", "assistant", "final", false)),
+            80
+        ).stream().map(TerminalLine::text).toList();
+
+        assertEquals(List.of("final"), history);
+    }
+
+    @Test
+    void mutableSurfaceExcludesStableHistoryAndFitsBoundedHeight() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiMessageBlock stable = new TuiMessageBlock(
+            "stable", "m1", "assistant", "stable history", false
+        );
+        TuiMessageBlock streaming = new TuiMessageBlock(
+            "streaming", "m2", "assistant", "streaming", true
+        );
+        TuiViewModel view = new TuiViewModel(
+            List.of(stable, streaming),
+            new StatusBarState("ses_1", "gpt-5.4", "running", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+        TuiRenderFrame surface = renderer.renderSurface(
+            view,
+            List.of(streaming),
+            new TuiLayout(80, 12),
+            "draft",
+            5,
+            List.of(),
+            false
+        );
+
+        assertFalse(surface.lines().stream().anyMatch(line -> line.contains("stable history")));
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains("streaming")));
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains("> draft")));
+        assertTrue(surface.lines().getLast().contains("ses_1"));
+        assertTrue(surface.lines().size() <= 11);
+    }
+
+    @Test
+    void mutableSurfaceKeepsOverlaysDiffAndSingleStatusLineVisible() {
+        PermissionPromptView prompt = new PermissionPromptView(
+            "perm_1",
+            "toolu_1",
+            "Need approval",
+            "bash:mvn test",
+            "allow_once",
+            "cancel",
+            List.of(
+                new PermissionOption(
+                    "allow_once", PermissionOptionKind.ALLOW_ONCE, "Allow", "", Optional.empty(), Map.of()
+                ),
+                new PermissionOption(
+                    "cancel", PermissionOptionKind.CANCEL, "Cancel", "", Optional.empty(), Map.of()
+                )
+            ),
+            "cancel"
+        );
+        TuiViewModel view = new TuiViewModel(
+            List.of(),
+            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            List.of(),
+            Optional.of(prompt),
+            Optional.of(new DiffView(
+                "1 file changed",
+                List.of(new GitDiffFileView(
+                    Path.of("src/App.java"), GitDiffStatus.MODIFIED, "Modified", Map.of()
+                )),
+                "+new line",
+                false,
+                Map.of()
+            ))
+        );
+
+        TuiRenderFrame surface = new TuiRenderer().renderSurface(
+            view,
+            List.of(),
+            new TuiLayout(80, 24),
+            "/",
+            1,
+            List.of("  slash: /model", "  skill: @review", "> resume: ses_2"),
+            false
+        );
+        String rendered = String.join("\n", surface.lines());
+
+        assertTrue(rendered.contains("permission toolu_1: Need approval"));
+        assertTrue(rendered.contains("> Cancel"));
+        assertTrue(rendered.contains("slash: /model"));
+        assertTrue(rendered.contains("skill: @review"));
+        assertTrue(rendered.contains("> resume: ses_2"));
+        assertTrue(rendered.contains("diff: 1 file changed"));
+        assertEquals(1, surface.lines().stream().filter(line -> line.contains("ses_1")).count());
+        assertTrue(surface.lines().getLast().contains("ses_1"));
+    }
+
+    @Test
+    void toolExpansionChangesOnlyLiveRegion() {
+        TuiRenderer renderer = new TuiRenderer();
+        TuiViewModel view = new TuiViewModel(
+            List.of(
+                new TuiToolBlock(
+                    "history-tool",
+                    "message-history",
+                    "use-history",
+                    "custom_tool",
+                    TuiToolState.DONE,
+                    "completed",
+                    "history detail 1\nhistory detail 2\nhistory detail 3\nhistory detail 4\nhistory detail 5",
+                    false
+                ),
+                new TuiToolBlock(
+                    "live-tool",
+                    "message-live",
+                    "use-live",
+                    "custom_tool",
+                    TuiToolState.RUNNING,
+                    "active",
+                    String.join("\n", java.util.stream.IntStream.rangeClosed(1, 20)
+                        .mapToObj(index -> "live detail " + index)
+                        .toList()),
+                    true
+                )
+            ),
+            new StatusBarState("ses_1", "gpt-5.4", "running", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<TerminalLine> history = renderer.renderCommittedBlocks(partition.history(), 60);
+        List<String> collapsed = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(60, 14), "", -1, List.of(), false
+        ).lines();
+        List<String> expanded = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(60, 14), "", -1, List.of(), true
+        ).lines();
+
+        assertTrue(history.stream().anyMatch(line -> line.text().contains("history detail")));
+        assertFalse(collapsed.equals(expanded));
+    }
+
+    @Test
     void rendersLinearTranscriptStatusAndInput() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "hello world", false)),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "tool:running"),
@@ -44,7 +193,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(12, 5), "draft");
+        List<String> lines = render(renderer, view, new TuiLayout(12, 5), "draft");
 
         assertEquals(5, lines.size());
         assertEquals("hello world", lines.get(0));
@@ -57,7 +206,6 @@ class TuiRendererTest {
     @Test
     void statusBarPreservesToolOnNarrowWidth() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("session-long", "very-long-model", "execute", "tool:running"),
@@ -66,7 +214,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(10, 3), "");
+        List<String> lines = render(renderer, view, new TuiLayout(10, 3), "");
 
         assertTrue(lines.getLast().contains("tool"));
     }
@@ -74,7 +222,6 @@ class TuiRendererTest {
     @Test
     void statusBarWithApprovalProjectionTruncatesOnNarrowWidth() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState(
@@ -94,37 +241,15 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(20, 3), "");
+        List<String> lines = render(renderer, view, new TuiLayout(20, 3), "");
 
         assertTrue(AnsiWidth.displayWidth(lines.getLast()) <= 20);
         assertFalse(lines.getLast().contains("\n"));
     }
 
     @Test
-    void statusBarDoesNotRenderApplicationScrollbackCounter() {
-        TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
-        screen.setTranscript(List.of("old", "current"));
-        TuiViewModel view = new TuiViewModel(
-            List.of(
-                new TuiMessageBlock("b1", "m1", "assistant", "old", false),
-                new TuiMessageBlock("b2", "m2", "assistant", "current", false)
-            ),
-            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
-            List.of(),
-            Optional.empty(),
-            Optional.empty()
-        );
-
-        List<String> lines = renderer.render(view, screen, new TuiLayout(80, 3), "");
-
-        assertFalse(lines.getLast().contains("scroll +"));
-    }
-
-    @Test
     void statusBarDoesNotRenderInternalRuntimeFields() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState(
@@ -142,7 +267,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(120, 3), "");
+        List<String> lines = render(renderer, view, new TuiLayout(120, 3), "");
 
         assertEquals("ses_1 gpt-5.4 EXECUTE DEFAULT_EXECUTE", lines.getLast());
         assertFalse(lines.getLast().contains("cwd:"));
@@ -154,7 +279,6 @@ class TuiRendererTest {
     @Test
     void messageBlocksUseMarkdownRenderer() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "## Done ##\n- [x] task", false)),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -163,7 +287,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(20, 6), "");
+        List<String> lines = render(renderer, view, new TuiLayout(20, 6), "");
 
         assertEquals("Done", lines.get(0));
         assertEquals("[x] task", lines.get(1));
@@ -172,7 +296,6 @@ class TuiRendererTest {
     @Test
     void rendersUserAndThinkingBlocksWithRoleStyles() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(3);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("u1", "m1", "user", "请修复 TUI", false),
@@ -185,7 +308,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 7), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 7), "");
 
         assertEquals("\033[38;5;81muser: 请修复 TUI\033[0m", lines.get(0));
         assertEquals("\033[38;5;244mthinking: 分析路径\033[0m", lines.get(1));
@@ -195,7 +318,6 @@ class TuiRendererTest {
     @Test
     void rendersMultilineThinkingWithoutEmbeddedNewlines() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiThinkingBlock("t1", "m1", "第一行\n第二行", false, false)),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -204,7 +326,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 6), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 6), "");
 
         assertEquals("\033[38;5;244mthinking: 第一行\033[0m", lines.get(0));
         assertEquals("\033[38;5;244m          第二行\033[0m", lines.get(1));
@@ -213,7 +335,6 @@ class TuiRendererTest {
     @Test
     void compressesThinkingDisplayAndShowsHiddenLineCount() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(4);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiThinkingBlock("t1", "m1", "第一行\n第二行\n第三行\n第四行\n第五行", false, false)),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -222,7 +343,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 8), "");
 
         assertEquals("\033[38;5;244mthinking: 第一行\033[0m", lines.get(0));
         assertEquals("\033[38;5;244m          第二行\033[0m", lines.get(1));
@@ -235,7 +356,6 @@ class TuiRendererTest {
     @Test
     void inputLineMarksHardwareCursorAtEditorCursor() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -244,7 +364,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(30, 3), "alpha beta", 6);
+        List<String> lines = render(renderer, view, new TuiLayout(30, 4), "alpha beta", 6);
 
         assertInputBorder(lines.get(0), 30);
         assertInputContent(lines.get(lines.size() - 2), "> alpha |CURSOR|" + INPUT_CURSOR + "beta");
@@ -253,7 +373,6 @@ class TuiRendererTest {
     @Test
     void emptyTranscriptRendersInputBlockAndStatusOnly() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -262,7 +381,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(20, 6), "", 0);
+        List<String> lines = render(renderer, view, new TuiLayout(20, 6), "", 0);
 
         assertEquals(4, lines.size());
         assertInputBorder(lines.get(0), 20);
@@ -274,7 +393,6 @@ class TuiRendererTest {
     @Test
     void compactRuntimeUsesSingleReadonlyInputLineWithoutCursorBackgroundBlock() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4-mini", "running", "DEFAULT_EXECUTE"),
@@ -284,7 +402,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "draft", 5);
+        List<String> lines = render(renderer, view, new TuiLayout(40, 8), "draft", 5);
         String frame = String.join("\n", lines);
 
         assertTrue(frame.contains("compact"));
@@ -295,7 +413,6 @@ class TuiRendererTest {
     @Test
     void inputLineKeepsCursorMarkerAfterNarrowWrapping() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -304,17 +421,16 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(8, 3), "abcdefgh", 8);
+        List<String> lines = render(renderer, view, new TuiLayout(8, 3), "abcdefgh", 8);
 
-        assertEquals(3, lines.size());
-        assertInputBorder(lines.get(0), 8);
-        assertInputContent(lines.get(lines.size() - 2), "fgh|CURSOR|" + INPUT_CURSOR);
+        assertEquals(2, lines.size());
+        assertInputContent(lines.getFirst(), "fgh|CURSOR|" + INPUT_CURSOR);
+        assertTrue(lines.getLast().contains("ses_1"));
     }
 
     @Test
     void visibleCursorDoesNotPushInputContentPastLayoutWidth() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -323,17 +439,16 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(8, 4), "abcdef", 6);
+        List<String> lines = render(renderer, view, new TuiLayout(8, 4), "abcdef", 6);
 
         for (String line : lines) {
-            assertTrue(AnsiWidth.displayWidth(line.replace(TerminalFrameRenderer.CURSOR_MARKER, "")) <= 8);
+            assertTrue(AnsiWidth.displayWidth(line.replace(TuiRenderFrame.CURSOR_MARKER, "")) <= 8);
         }
     }
 
     @Test
-    void longInputSoftWrapsInsideBottomInputBlockWithFullTranscript() {
+    void longInputIsWindowedWithoutChangingCommittedHistory() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("b1", "m1", "assistant", "line1", false),
@@ -347,24 +462,22 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(8, 6), "abcdefghij", 10);
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<String> history = renderer.renderCommittedBlocks(partition.history(), 8).stream()
+            .map(TerminalLine::text)
+            .toList();
+        TuiRenderFrame surface = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(8, 6), "abcdefghij", 10, List.of(), false
+        );
 
-        assertEquals(9, lines.size());
-        assertEquals("line1", lines.get(0));
-        assertEquals("line2", lines.get(1));
-        assertEquals("line3", lines.get(2));
-        assertEquals("line4", lines.get(3));
-        assertInputBorder(lines.get(lines.size() - 5), 8);
-        assertEquals("\033[48;5;236m> abcde\033[0m", lines.get(lines.size() - 4));
-        assertEquals("\033[48;5;236mfghij|CURSOR|" + INPUT_CURSOR + "\033[0m", lines.get(lines.size() - 3));
-        assertInputBorder(lines.get(lines.size() - 2), 8);
-        assertTrue(lines.getLast().contains("ses_1"));
+        assertEquals(List.of("line1", "line2", "line3", "line4"), history);
+        assertTrue(surface.lines().size() <= 5);
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains(TuiRenderFrame.CURSOR_MARKER)));
     }
 
     @Test
     void explicitNewlineStartsNewInputRowWithoutSplittingDraftSemantics() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -373,7 +486,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(12, 5), "hello\nworld", 11);
+        List<String> lines = render(renderer, view, new TuiLayout(12, 6), "hello\nworld", 11);
 
         assertEquals(5, lines.size());
         assertInputBorder(lines.get(0), 12);
@@ -384,9 +497,8 @@ class TuiRendererTest {
     }
 
     @Test
-    void inputViewportShowsLatestRowsWhileKeepingFullTranscript() {
+    void inputViewportShowsCursorRowsWhileKeepingOneTranscriptLine() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "history", false)),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -395,21 +507,19 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(10, 6), "one\ntwo\nthree\nfour", 18);
+        List<String> lines = render(renderer, view, new TuiLayout(10, 6), "one\ntwo\nthree\nfour", 18);
 
-        assertEquals(7, lines.size());
+        assertTrue(lines.size() <= 6);
         assertTrue(lines.contains("history"));
-        assertInputBorder(lines.get(lines.size() - 6), 10);
-        assertEquals("\033[48;5;236mtwo\033[0m", lines.get(lines.size() - 5));
-        assertEquals("\033[48;5;236mthree\033[0m", lines.get(lines.size() - 4));
-        assertEquals("\033[48;5;236mfour|CURSOR|" + INPUT_CURSOR + "\033[0m", lines.get(lines.size() - 3));
-        assertInputBorder(lines.get(lines.size() - 2), 10);
+        assertFalse(lines.stream().anyMatch(line -> line.contains("two")));
+        assertTrue(lines.stream().anyMatch(line -> line.contains("three")));
+        assertTrue(lines.stream().anyMatch(line -> line.contains("four")
+            && line.contains(TuiRenderFrame.CURSOR_MARKER)));
     }
 
     @Test
-    void inputBlockCanUseFullTerminalHeightAfterFullTranscript() {
+    void minimumInputSurfaceFitsBesideCommittedHistoryInThreeLineTerminal() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "history", false)),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -418,19 +528,22 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(10, 3), "one\ntwo\nthree\nfour", 18);
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<TerminalLine> history = renderer.renderCommittedBlocks(partition.history(), 10);
+        TuiRenderFrame surface = renderer.renderSurface(
+            view, partition.live(), new TuiLayout(10, 3), "one\ntwo\nthree\nfour", 18, List.of(), false
+        );
 
-        assertEquals(4, lines.size());
-        assertTrue(lines.contains("history"));
-        assertInputBorder(lines.get(lines.size() - 3), 10);
-        assertEquals("\033[48;5;236mfour|CURSOR|" + INPUT_CURSOR + "\033[0m", lines.get(lines.size() - 2));
-        assertTrue(lines.getLast().contains("ses_1"));
+        assertEquals(List.of(new TerminalLine("history")), history);
+        assertTrue(surface.lines().size() <= 2);
+        assertTrue(surface.lines().stream().anyMatch(line -> line.contains("four")
+            && line.contains(TuiRenderFrame.CURSOR_MARKER)));
+        assertTrue(surface.lines().getLast().contains("ses_1"));
     }
 
     @Test
     void permissionPromptRendersAsBottomOverlay() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(5);
         PermissionUpdate rememberUpdate = new PermissionUpdate(
             PermissionRuleSource.SESSION,
             new PermissionRule(
@@ -468,22 +581,20 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 9), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 9), "");
 
         assertInputBorder(lines.get(0), 40);
         assertInputContent(lines.get(1), "> ");
-        assertInputBorder(lines.get(2), 40);
-        assertEquals("permission toolu_1: Need approval", lines.get(3));
-        assertEquals("rule: bash:npm test", lines.get(4));
-        assertEquals("> 允许一次", lines.get(5));
-        assertEquals("  允许并记住", lines.get(6));
+        assertEquals("permission toolu_1: Need approval", lines.get(2));
+        assertEquals("rule: bash:npm test", lines.get(3));
+        assertEquals("> 允许一次", lines.get(4));
+        assertEquals("  允许并记住", lines.get(5));
         assertTrue(lines.getLast().contains("ses_1"));
     }
 
     @Test
-    void permissionPromptStaysVisibleWhenWorkingLineIsActiveInShortViewport() {
+    void permissionPromptTakesPriorityOverWorkingLineInShortViewport() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         PermissionPromptView prompt = new PermissionPromptView(
             "perm_toolu_1",
             "toolu_1",
@@ -506,17 +617,56 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 6), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 6), "");
 
         assertTrue(lines.stream().anyMatch(line -> line.contains("permission toolu_1")));
         assertTrue(lines.stream().anyMatch(line -> line.contains("> 允许一次")));
-        assertTrue(lines.stream().anyMatch(line -> line.contains("working (12s)")));
+        assertFalse(lines.stream().anyMatch(line -> line.contains("working (12s)")));
+    }
+
+    @Test
+    void tallPermissionPromptKeepsSelectedOptionInputCursorAndStatusVisible() {
+        TuiRenderer renderer = new TuiRenderer();
+        List<PermissionOption> options = java.util.stream.IntStream.rangeClosed(1, 8)
+            .mapToObj(index -> new PermissionOption(
+                "option_" + index,
+                PermissionOptionKind.ALLOW_ONCE,
+                "Option " + index,
+                "Description " + index,
+                Optional.empty(),
+                Map.of()
+            ))
+            .toList();
+        PermissionPromptView prompt = new PermissionPromptView(
+            "perm_toolu_1",
+            "toolu_1",
+            "Need approval\nwith a long reason\nthat occupies several rows",
+            "bash:long-running-command",
+            "option_6",
+            "option_8",
+            options,
+            "option_6"
+        );
+        TuiViewModel view = new TuiViewModel(
+            List.of(new TuiMessageBlock("b1", "m1", "assistant", "latest message", false)),
+            new StatusBarState("ses_1", "gpt-5.4", "running", "default"),
+            List.of(),
+            Optional.of(prompt),
+            Optional.empty()
+        );
+
+        List<String> lines = render(renderer, view, new TuiLayout(40, 6), "draft", 5);
+
+        assertTrue(lines.size() <= 6);
+        assertTrue(lines.stream().anyMatch(line -> line.contains("> Option 6")));
+        assertTrue(lines.stream().anyMatch(line -> line.contains(TuiRenderFrame.CURSOR_MARKER)));
+        assertTrue(lines.getLast().contains("ses_1"));
+        assertFalse(lines.stream().anyMatch(line -> line.contains("Option 1")));
     }
 
     @Test
     void multilinePermissionPromptIsSplitIntoFrameLines() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(8);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -537,7 +687,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(80, 12), "");
+        List<String> lines = render(renderer, view, new TuiLayout(80, 12), "");
 
         assertTrue(lines.stream().noneMatch(line -> line.contains("\n")));
         int promptStart = lines.indexOf("permission toolu_1: REQUEST_PERMISSIONS");
@@ -552,7 +702,6 @@ class TuiRendererTest {
     @Test
     void diffViewIsRenderedInTranscriptArea() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(4);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -567,7 +716,7 @@ class TuiRendererTest {
             ))
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 9), "");
 
         assertEquals("diff: 1 file changed", lines.get(0));
         assertEquals("M src/App.java", lines.get(1));
@@ -576,9 +725,8 @@ class TuiRendererTest {
     }
 
     @Test
-    void runtimeLineUsesTranscriptSpaceOnlyWhenActive() {
+    void runtimeLineAppearsOnlyInMutableSurface() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(3);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("b1", "m1", "assistant", "line1", false),
@@ -592,18 +740,14 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 8), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 8), "");
 
-        assertEquals("line1", lines.get(0));
-        assertEquals("line2", lines.get(1));
-        assertEquals("line3", lines.get(2));
+        assertEquals(List.of("line1", "line2", "line3"), lines.subList(0, 3));
         assertEquals("· retrying attempt 2 rate limit", lines.get(3));
         assertInputBorder(lines.get(4), 40);
         assertInputContent(lines.get(5), "> ");
         assertInputBorder(lines.get(6), 40);
         assertTrue(lines.getLast().contains("ses_1"));
-
-        TuiScreen screenWithoutRuntime = new TuiScreen(3);
         TuiViewModel withoutRuntime = new TuiViewModel(
             view.blocks(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -611,17 +755,14 @@ class TuiRendererTest {
             Optional.empty(),
             Optional.empty()
         );
-        List<String> withoutRuntimeLines = renderer.render(withoutRuntime, screenWithoutRuntime, new TuiLayout(40, 8), "");
+        List<String> withoutRuntimeLines = render(renderer, withoutRuntime, new TuiLayout(40, 8), "");
 
-        assertEquals("line1", withoutRuntimeLines.get(0));
-        assertEquals("line2", withoutRuntimeLines.get(1));
-        assertEquals("line3", withoutRuntimeLines.get(2));
+        assertEquals(List.of("line1", "line2", "line3"), withoutRuntimeLines.subList(0, 3));
     }
 
     @Test
     void toolDetailsRenderBelowToolHeader() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(3);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock("tool:1", "msg_1", "toolu_1", "bash", TuiToolState.DONE, "Bash", "stdout: ok\nexit 0", false)),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -630,7 +771,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(view, screen, new TuiLayout(40, 7), "");
+        List<String> lines = render(renderer, view, new TuiLayout(40, 7), "");
 
         assertEquals("done $ Bash", lines.get(0));
         assertEquals("  stdout: ok", lines.get(1));
@@ -640,7 +781,6 @@ class TuiRendererTest {
     @Test
     void splitsToolRuntimeAndOverlayLogicalLinesIntoPhysicalFrameLines() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:1",
@@ -659,9 +799,9 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        TuiRenderFrame frame = renderer.renderFrame(
+        TuiRenderFrame frame = renderFrame(
+            renderer,
             view,
-            screen,
             new TuiLayout(40, 20),
             "",
             0,
@@ -680,7 +820,6 @@ class TuiRendererTest {
     @Test
     void statusBarNormalizesLogicalLineBreaksWithoutGrowingChrome() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4\r\nmini", "execute", "default"),
@@ -689,7 +828,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        TuiRenderFrame frame = renderer.renderFrame(view, screen, new TuiLayout(40, 8), "", 0);
+        TuiRenderFrame frame = renderFrame(renderer, view, new TuiLayout(40, 8), "", 0);
 
         assertFalse(frame.lines().getLast().contains("\r"));
         assertFalse(frame.lines().getLast().contains("\n"));
@@ -699,7 +838,6 @@ class TuiRendererTest {
     @Test
     void narrowToolStatusFallbackAlsoNormalizesLogicalLineBreaks() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(1);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("session-long", "model-long", "execute", "tool:\nrunning"),
@@ -708,7 +846,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        TuiRenderFrame frame = renderer.renderFrame(view, screen, new TuiLayout(20, 8), "", 0);
+        TuiRenderFrame frame = renderFrame(renderer, view, new TuiLayout(20, 8), "", 0);
 
         assertEquals("tool tool: running", frame.lines().getLast());
     }
@@ -716,7 +854,6 @@ class TuiRendererTest {
     @Test
     void bashToolCollapsedShowsCommandStatusSummaryAndTailPreview() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:1",
@@ -734,7 +871,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
+        List<String> lines = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
 
         assertTrue(lines.contains("failed $ mvn test"));
         assertTrue(lines.contains("  exit 1"));
@@ -745,7 +882,6 @@ class TuiRendererTest {
     @Test
     void readEditAndUnknownToolsUseStructuredTitles() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiToolBlock("tool:read", "msg_1", "toolu_read", "read", TuiToolState.DONE, "src/App.java:1-80", "1 | class App {}\n2 |", false),
@@ -758,7 +894,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
+        List<String> lines = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
 
         assertTrue(lines.contains("tools: read x1 (Ctrl+O details)"));
         assertTrue(lines.contains("done edit src/App.java +1 -1"));
@@ -768,7 +904,6 @@ class TuiRendererTest {
     @Test
     void readToolOutputNeverShowsFileContentAndExpandsToInvocationOnly() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(30);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:1",
@@ -788,13 +923,13 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> collapsed = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
-        List<String> expanded = renderer.renderFrame(view, screen, new TuiLayout(80, 30), "", -1, List.of(), true).lines();
+        List<String> collapsed = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), false).lines();
+        List<String> expanded = renderFrame(renderer, view, new TuiLayout(80, 30), "", -1, List.of(), true).lines();
 
         assertFalse(collapsed.contains("  1 | line 1"));
         assertFalse(collapsed.contains("  11 | line 11"));
         assertTrue(collapsed.contains("tools: read x1 (Ctrl+O details)"));
-        assertTrue(expanded.contains("done read src/Large.java:1-20"));
+        assertEquals(collapsed, expanded);
         assertFalse(expanded.contains("  1 | line 1"));
         assertFalse(expanded.contains("  11 | line 11"));
     }
@@ -802,7 +937,6 @@ class TuiRendererTest {
     @Test
     void writeToolStillShowsContentPreview() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:write",
@@ -820,7 +954,7 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(view, screen, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
+        List<String> lines = renderFrame(renderer, view, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
 
         assertTrue(lines.contains("done write src/App.java"));
         assertTrue(lines.contains("  class App {}"));
@@ -829,7 +963,6 @@ class TuiRendererTest {
     @Test
     void searchToolsCollapseToCountsAndExpandToInvocationOnly() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(20);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiToolBlock(
@@ -869,14 +1002,16 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> collapsed = renderer.renderFrame(view, screen, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
-        List<String> expanded = renderer.renderFrame(view, screen, new TuiLayout(80, 20), "", -1, List.of(), true).lines();
+        List<String> collapsed = renderFrame(renderer, view, new TuiLayout(80, 20), "", -1, List.of(), false).lines();
+        List<String> expanded = renderFrame(renderer, view, new TuiLayout(80, 20), "", -1, List.of(), true).lines();
 
-        assertTrue(collapsed.contains("tools: glob x1, read x1, grep x1 (Ctrl+O details)"));
+        assertTrue(collapsed.contains("tools: glob x1, read x1 (Ctrl+O details)"));
+        assertTrue(collapsed.contains("tools: grep x1 (Ctrl+O details)"));
         assertFalse(collapsed.contains("  matched AGENTS.md"));
         assertFalse(collapsed.contains("File: AGENTS.md"));
-        assertTrue(expanded.contains("done glob {path=., pattern=**/*}"));
-        assertTrue(expanded.contains("done read AGENTS.md:1-200"));
+        assertTrue(expanded.contains("tools: glob x1, read x1 (Ctrl+O details)"));
+        assertFalse(expanded.contains("done glob {path=., pattern=**/*}"));
+        assertFalse(expanded.contains("done read AGENTS.md:1-200"));
         assertTrue(expanded.contains("running grep {pattern=apiKey, path=.}"));
         assertFalse(expanded.contains("  matched AGENTS.md"));
         assertFalse(expanded.contains("File: AGENTS.md"));
@@ -885,19 +1020,18 @@ class TuiRendererTest {
     @Test
     void expandedToolOutputIsBoundedByAvailableTerminalRows() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(12);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiToolBlock(
                 "tool:bash",
                 "msg_1",
                 "toolu_bash",
                 "bash",
-                TuiToolState.DONE,
+                TuiToolState.RUNNING,
                 "mvn test",
                 String.join("\n", java.util.stream.IntStream.rangeClosed(1, 60)
                     .mapToObj(index -> "stdout: line " + index)
                     .toList()),
-                false
+                true
             )),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
             List.of(),
@@ -905,9 +1039,9 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.renderFrame(
+        List<String> lines = renderFrame(
+            renderer,
             view,
-            screen,
             new TuiLayout(80, 12),
             "draft",
             5,
@@ -915,7 +1049,7 @@ class TuiRendererTest {
             true
         ).lines();
 
-        assertTrue(lines.size() <= 12, "expanded tool output should not exceed terminal height");
+        assertTrue(lines.size() <= 11, "expanded tool output should not exceed surface height");
         assertTrue(lines.stream().anyMatch(line -> line.contains("more lines") || line.contains("earlier lines")));
         assertTrue(lines.stream().anyMatch(line -> line.contains("> draft")));
         assertTrue(lines.stream().anyMatch(line -> line.contains("> /model")));
@@ -923,9 +1057,98 @@ class TuiRendererTest {
     }
 
     @Test
+    void collapsedAndExpandedActiveToolFramesShareSurfaceBudget() {
+        String details = String.join("\n", java.util.stream.IntStream.rangeClosed(1, 100)
+            .mapToObj(index -> "detail line " + index)
+            .toList());
+        List<TuiBlock> tools = java.util.stream.IntStream.range(0, 10)
+            .mapToObj(index -> (TuiBlock) new TuiToolBlock(
+                "tool:" + index,
+                "msg_1",
+                "toolu_" + index,
+                "custom_tool",
+                TuiToolState.RUNNING,
+                "call " + index,
+                details,
+                true
+            ))
+            .toList();
+        TuiViewModel view = new TuiViewModel(
+            tools,
+            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+        TuiRenderer renderer = new TuiRenderer();
+
+        TuiRenderFrame collapsed = renderFrame(
+            renderer,
+            view,
+            new TuiLayout(80, 12),
+            "",
+            -1,
+            List.of(),
+            false
+        );
+        TuiRenderFrame expanded = renderFrame(
+            renderer,
+            view,
+            new TuiLayout(80, 12),
+            "",
+            -1,
+            List.of(),
+            true
+        );
+
+        assertFrameFitsHeightWithOmissionMarker(collapsed, 12);
+        assertFrameFitsHeightWithOmissionMarker(expanded, 12);
+    }
+
+    @Test
+    void narrowWrappedToolTitleStillLeavesAnOmissionMarkerWithinFiveRows() {
+        String details = String.join("\n", java.util.stream.IntStream.rangeClosed(1, 100)
+            .mapToObj(index -> "detail line " + index)
+            .toList());
+        TuiViewModel view = new TuiViewModel(
+            List.of(new TuiToolBlock(
+                "tool:custom",
+                "msg_1",
+                "toolu_custom",
+                "custom_tool",
+                TuiToolState.DONE,
+                "x".repeat(120),
+                details,
+                false
+            )),
+            new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
+            List.of(),
+            Optional.empty(),
+            Optional.empty()
+        );
+        TuiRenderFrame frame = renderFrame(
+            new TuiRenderer(),
+            view,
+            new TuiLayout(20, 20),
+            "",
+            -1,
+            List.of(),
+            false
+        );
+
+        assertTrue(frame.lines().size() <= 19);
+        assertTrue(frame.lines().stream().anyMatch(line -> line.contains("more lines")));
+    }
+
+    private void assertFrameFitsHeightWithOmissionMarker(TuiRenderFrame frame, int height) {
+        assertTrue(frame.lines().size() <= height - 1);
+        assertTrue(frame.lines().stream()
+            .anyMatch(line -> line.contains("more lines") || line.contains("earlier lines")));
+    }
+
+    @Test
     void slashOverlayRendersBelowInputBlock() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(2);
         TuiViewModel view = new TuiViewModel(
             List.of(),
             new StatusBarState("ses_1", "gpt-5.4", "execute", "default"),
@@ -934,29 +1157,27 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> lines = renderer.render(
+        List<String> lines = render(
+            renderer,
             view,
-            screen,
             new TuiLayout(40, 7),
             "/",
             1,
             List.of("> /model", "  /thinking", "  /compact")
         );
 
-        assertEquals(7, lines.size());
+        assertEquals(6, lines.size());
         assertInputBorder(lines.get(0), 40);
         assertInputContent(lines.get(1), "> /|CURSOR|" + INPUT_CURSOR);
-        assertInputBorder(lines.get(2), 40);
-        assertTrue(lines.get(3).startsWith("> /model"));
-        assertTrue(lines.get(4).contains("  /thinking"));
-        assertTrue(lines.get(5).contains("  /compact"));
-        assertTrue(lines.get(6).contains("ses_1"));
+        assertTrue(lines.get(2).startsWith("> /model"));
+        assertTrue(lines.get(3).contains("  /thinking"));
+        assertTrue(lines.get(4).contains("  /compact"));
+        assertTrue(lines.get(5).contains("ses_1"));
     }
 
     @Test
     void overlayRendersBelowInputWithTranscriptContent() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen = new TuiScreen(10);
         TuiViewModel view = new TuiViewModel(
             List.of(
                 new TuiMessageBlock("b1", "m1", "assistant", "hello", false),
@@ -968,16 +1189,20 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> withOverlay = renderer.render(
-            view, screen, new TuiLayout(40, 10), "/", 1,
+        List<String> withOverlay = render(
+            renderer, view, new TuiLayout(40, 10), "/", 1,
             List.of("> /model", "  /thinking", "  /compact")
         );
 
-        List<String> withoutOverlay = renderer.render(
-            view, screen, new TuiLayout(40, 10), "/", 1
+        List<String> withoutOverlay = render(
+            renderer, view, new TuiLayout(40, 10), "/", 1
         );
 
-        assertEquals(withoutOverlay.size() + 3, withOverlay.size());
+        assertTrue(withOverlay.size() <= 9);
+        assertTrue(withoutOverlay.size() <= 9);
+        assertTrue(withOverlay.size() > withoutOverlay.size());
+        assertEquals(List.of("hello", "world"), withOverlay.subList(0, 2));
+        assertEquals(List.of("hello", "world"), withoutOverlay.subList(0, 2));
         int overlayIndex = -1;
         int inputBorderIndex = -1;
         for (int i = 0; i < withOverlay.size(); i++) {
@@ -996,8 +1221,6 @@ class TuiRendererTest {
     @Test
     void emptyOverlayProducesSameOutputAsNoOverlay() {
         TuiRenderer renderer = new TuiRenderer();
-        TuiScreen screen1 = new TuiScreen(5);
-        TuiScreen screen2 = new TuiScreen(5);
         TuiViewModel view = new TuiViewModel(
             List.of(new TuiMessageBlock("b1", "m1", "assistant", "test", false)),
             new StatusBarState("ses_1", "gpt-5.4", "ready", "default"),
@@ -1006,14 +1229,91 @@ class TuiRendererTest {
             Optional.empty()
         );
 
-        List<String> withEmptyOverlay = renderer.render(
-            view, screen1, new TuiLayout(40, 8), "hello", 5, List.of()
+        List<String> withEmptyOverlay = render(
+            renderer, view, new TuiLayout(40, 8), "hello", 5, List.of()
         );
-        List<String> withoutOverlay = renderer.render(
-            view, screen2, new TuiLayout(40, 8), "hello", 5
+        List<String> withoutOverlay = render(
+            renderer, view, new TuiLayout(40, 8), "hello", 5
         );
 
         assertEquals(withoutOverlay, withEmptyOverlay);
+    }
+
+    private List<String> render(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input
+    ) {
+        return renderFrame(renderer, view, layout, input, -1).lines();
+    }
+
+    private List<String> render(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor).lines();
+    }
+
+    private List<String> render(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor,
+        List<String> overlayLines
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor, overlayLines).lines();
+    }
+
+    private TuiRenderFrame renderFrame(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor, List.of());
+    }
+
+    private TuiRenderFrame renderFrame(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor,
+        List<String> overlayLines
+    ) {
+        return renderFrame(renderer, view, layout, input, cursor, overlayLines, false);
+    }
+
+    private TuiRenderFrame renderFrame(
+        TuiRenderer renderer,
+        TuiViewModel view,
+        TuiLayout layout,
+        String input,
+        int cursor,
+        List<String> overlayLines,
+        boolean toolOutputExpanded
+    ) {
+        TuiTranscriptPartition partition = new TuiTranscriptPartitioner().partition(view.blocks());
+        List<String> lines = new java.util.ArrayList<>();
+        renderer.renderCommittedBlocks(partition.history(), layout.width()).stream()
+            .map(TerminalLine::text)
+            .forEach(lines::add);
+        lines.addAll(renderer.renderSurface(
+            view,
+            partition.live(),
+            layout,
+            input,
+            cursor,
+            overlayLines,
+            toolOutputExpanded
+        ).lines());
+        return TuiRenderFrame.fromTextLines(lines);
     }
 
     private void assertInputBorder(String line, int width) {
@@ -1023,5 +1323,31 @@ class TuiRendererTest {
 
     private void assertInputContent(String line, String content) {
         assertEquals(INPUT_BACKGROUND + content + ANSI_RESET, line);
+    }
+
+    private int indexOfContentSeparator(List<String> lines) {
+        for (int index = 0; index < lines.size(); index++) {
+            if (isContentSeparator(lines.get(index))) {
+                return index;
+            }
+        }
+        return -1;
+    }
+
+    private int indexOfLineContaining(List<String> lines, String content) {
+        for (int index = 0; index < lines.size(); index++) {
+            if (lines.get(index).contains(content)) {
+                return index;
+            }
+        }
+        return -1;
+    }
+
+    private int indexOfInputBorder(List<String> lines) {
+        return indexOfLineContaining(lines, "─");
+    }
+
+    private boolean isContentSeparator(String line) {
+        return line.contains("┄");
     }
 }
